xterm (258-2) UNRELEASED; urgency=low

  * README.Debian: drop obsolete content, including a link to the old Debian X
    FAQ (closes: #581647).  Thanks, Bob Proulx!
  * Add a NEWS entry about the changed default value for pointerMode (closes:
    #581653).  Request and wording from Bob Proulx, thanks!

 -- Julien Cristau <jcristau@debian.org>  Fri, 14 May 2010 19:51:07 +0200

xterm (258-1) unstable; urgency=low

  * terminfo: derive xterm{16,256,88}-color from xterm-debian (patch by Sven
    Joachim), closes: #547443.
  * New upstream release
    + modify AllocateTermColor() to separate initialization from control
      sequences, fixing problem from patch #254 changes where enabling
      allowSendEvents resource prevents setting cursor color on command-line
      (closes: #572928)

 -- Julien Cristau <jcristau@debian.org>  Sat, 08 May 2010 13:48:12 +0200

xterm (256-1) unstable; urgency=low

  * New upstream release.
  * Delete patch 901_xterm_manpage.diff, the utmp/wtmp paths are now set in
    the manpage at build/install time thanks to upstream changes.
  * Refresh patches 902 and 904.
  * Add build dependency on xorg-docs-core to fix the reference to X(7) in
    xterm(1).
  * Also document the libxkbfile-dev and libutempter-dev build-deps.

 -- Julien Cristau <jcristau@debian.org>  Sun, 14 Mar 2010 20:15:13 +0100

xterm (255-1) unstable; urgency=low

  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Add build-dep on libxkbfile-dev for XkbBell(3).
  * Remove myself from Uploaders
  * New upstream release
    + correct logic used to switch to alternate screen using FIFO-lines
      configuration (closes: #565772)
    + improve manpage by checking for actual locations of utmp/wtmp files
      (closes: #562640)
  * Refresh patches 900_debian_xterm.diff, 901_xterm_manpage.diff,
    902_windowops.diff, 904_fontops.diff.
  * Bump Standards-Version to 3.8.4.
